# sql-sop-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
src/sql_sop_mcp/: __init__.py  server.py
tests/: test_server.py
