[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-sop-mcp"
version = "0.1.1"
description = "Model Context Protocol server that exposes sql-sop's SQL linter to LLMs (Claude, Cursor, ChatGPT, Continue)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Pawan Singh Kapkoti" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "sql",
    "linter",
    "llm",
    "claude",
    "cursor",
    "chatgpt",
    "sql-sop",
    "sql-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sql-sop>=0.6.1",
    "fastmcp>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
sql-sop-mcp = "sql_sop_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Pawansingh3889/sql-sop-mcp"
Repository = "https://github.com/Pawansingh3889/sql-sop-mcp"
Issues = "https://github.com/Pawansingh3889/sql-sop-mcp/issues"
"sql-sop on PyPI" = "https://pypi.org/project/sql-sop/"
"sql-sop playground" = "https://pawansingh3889.github.io/sql-guard/"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_sop_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/sql_sop_mcp", "README.md", "LICENSE", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
